# STM32_experiment

./: .gitignore
exp1_led/: CMakeLists.txt
exp1_led/Project/: JLinkLog.txt  project.uvguix.Administrator  project.uvguix.tangyq  project.uvoptx  project.uvprojx  project_ZQ_STM32F407.dep
exp1_led/Project/List/: project.map
exp1_led/User/: main.c  main.h
exp1_led_hal/: .mxproject  CMakeLists.txt  stm32F4.ioc  stm32F4.txt
exp1_led_hal/Inc/: Keyboard.h  LED.H
exp1_led_hal/MDK-ARM/: JLinkLog.txt  stm32F4.uvguix.tangyq  stm32F4.uvoptx  stm32F4.uvprojx
exp1_led_hal/MDK-ARM/stm32F4/: keyboard.crf  keyboard.d  led.crf  led.d  main.crf  main.d  stm32F4.axf  stm32F4.build_log.htm  stm32F4.htm  stm32F4.lnp  stm32F4.map  stm32F4_stm32F4.dep  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_gpio.d  stm32f4xx_hal_msp.crf  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.crf  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.crf  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.crf  stm32f4xx_hal_tim.d  (+6 more)
exp1_led_hal/Src/: Keyboard.c  LED.C  main.c  stm32f4xx_hal_msp.c  system_stm32f4xx.c
exp2_usart/: CMakeLists.txt
exp2_usart/Project/: project.uvgui.Administrator  project.uvguix.tangyq  project.uvoptx  project.uvprojx  project_ZQ_LED.dep
exp2_usart/User/: Keyboard.h  main.c  main.h  stm32f4xx_it.c
exp2_usart_hal/: CMakeLists.txt
exp2_usart_hal/MDK-ARM/: JLinkLog.txt  startup_stm32f407xx.lst  stm32F4.uvguix.tangyq  stm32F4.uvoptx  stm32F4.uvprojx
exp2_usart_hal/MDK-ARM/RTE/_stm32F4/: RTE_Components.h
exp2_usart_hal/MDK-ARM/stm32F4/: main.crf  main.d  startup_stm32f407xx.d  stm32F4.axf  stm32F4.build_log.htm  stm32F4.htm  stm32F4.lnp  stm32F4.map  stm32F4_stm32F4.dep  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_gpio.d  stm32f4xx_hal_msp.crf  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.crf  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.crf  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.crf  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.crf  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.crf  (+5 more)
exp2_usart_hal/Src/: main.c  stm32f4xx_hal_msp.c  system_stm32f4xx.c
exp3_rs232/: CMakeLists.txt
exp3_rs232/Project/: project.uvguix.tangyq  project.uvoptx  project.uvprojx  (+1 more)
exp4_net2_led/: CMakeLists.txt
exp4_net2_led/Project/: JLinkLog.txt  project.uvguix.tangyq  project.uvoptx  project.uvprojx
exp4_net2_led/Project/List/: project.map  startup_stm32f40_41xxx.lst
exp4_net2_led/User/: CHINESE.c  I2C.c  SCI.c  SCI.h  UDP_SERVER.C  UDP_SERVER.h  i2c.h  main.c  main.h  netconf.c  stm32f4x7_eth_bsp.c  stm32f4xx_it.c  stm32f4xx_it.h
(+35 files in other folders)
